# skeletest

./: CHANGELOG.md  DEVELOPER.md  LICENSE.md  README.md  skeletest.cabal
.github/workflows/: ci.yml  release.yml
src/: Skeletest.hs
src/Skeletest/: Assertions.hs  Main.hs  Plugin.hs  Predicate.hs
src/Skeletest/Internal/: CLI.hs  Constants.hs  Error.hs  Fixtures.hs  GHC.hs  Markers.hs  Plugin.hs  Predicate.hs  Preprocessor.hs  Snapshot.hs  Spec.hs  State.hs  TestInfo.hs  TestRunner.hs  TestSelection.hs  TestTargets.hs  Testable.hs
src/Skeletest/Internal/GHC/: Compat.hs  Compat_9_10.hs  Compat_9_6.hs  Compat_9_8.hs
src/Skeletest/Internal/Utils/: Color.hs  Diff.hs  HList.hs  Map.hs
src/Skeletest/Prop/: Gen.hs  Internal.hs  Range.hs
test/: ExampleSpec.hs  ExampleTest.hs  Main.hs
test/Skeletest/: AssertionsSpec.hs  MainSpec.hs  PredicateSpec.hs  PropSpec.hs
test/Skeletest/Internal/: CLISpec.hs  FixturesSpec.hs  PluginSpec.hs  PluginTest.hs  PredicateSpec.hs  SnapshotSpec.hs  SpecSpec.hs  TestTargetsSpec.hs
test/Skeletest/Internal/__snapshots__/: CLISpec.snap.md  FixturesSpec.snap.md  PredicateSpec.snap.md  SnapshotSpec.snap.md  SpecSpec.snap.md  TestTargetsSpec.snap.md
test/Skeletest/TestUtils/: Integration.hs
test/Skeletest/__snapshots__/: AssertionsSpec.snap.md  MainSpec.snap.md  PredicateSpec.snap.md  PropSpec.snap.md
test/__snapshots__/: ExampleSpec.snap.md  ExampleTest.snap.md
