cabal-version: 3.0

name: skeletest
version: 0.1.0
build-type: Simple

library
  hs-source-dirs: src
  exposed-modules:
    Skeletest
    Skeletest.Assertions
    Skeletest.Internal.CLI
    Skeletest.Internal.Constants
    Skeletest.Internal.Error
    Skeletest.Internal.Fixtures
    Skeletest.Internal.GHC
    Skeletest.Internal.Markers
    Skeletest.Internal.Plugin
    Skeletest.Internal.Predicate
    Skeletest.Internal.Preprocessor
    Skeletest.Internal.Snapshot
    Skeletest.Internal.Spec
    Skeletest.Internal.TestInfo
    Skeletest.Internal.TestTargets
    Skeletest.Internal.Utils.Diff
    Skeletest.Internal.Utils.HList
    Skeletest.Internal.Utils.Map
    Skeletest.Main
    Skeletest.Plugin
    Skeletest.Predicate
    Skeletest.Prop.Gen
    Skeletest.Prop.Internal
    Skeletest.Prop.Range
  build-depends:
      base
    , ansi-terminal
    , containers
    , Diff
    , directory
    , filepath
    , ghc
    , megaparsec
    , ordered-containers
    , parser-combinators
    , pretty
    , recover-rtti
    , template-haskell
    , text
    , transformers
    , unliftio
  default-language: GHC2021
  ghc-options: -Wall -Wcompat

executable skeletest-preprocessor
  main-is: src/bin/skeletest-preprocessor.hs
  build-depends:
      base
    , skeletest
    , text
  default-language: GHC2021
  ghc-options: -Wall -Wcompat

test-suite skeletest-tests
  type: exitcode-stdio-1.0
  ghc-options: -F -pgmF=skeletest-preprocessor
  build-tool-depends: skeletest:skeletest-preprocessor
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    ExampleSpec
    Skeletest.AssertionsSpec
    Skeletest.Internal.CLISpec
    Skeletest.Internal.FixturesSpec
    Skeletest.Internal.SnapshotSpec
    Skeletest.Internal.SpecSpec
    Skeletest.Internal.TestTargetsSpec
    Skeletest.MainSpec
    Skeletest.TestUtils.Integration
  build-depends:
      base
    , directory
    , filepath
    , skeletest
    , process
    , text
  default-language: GHC2021
  ghc-options: -Wall -Wcompat
